k8s/customer-db.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-db-deployment-d-aks
  labels:
    app: customer-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-db
  template:
    metadata:
      labels:
        app: customer-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: customer-db-service-d-aks
  labels:
    app: customer-db
spec:
  selector:
    app: customer-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
